# DJANGO-API-Shoe

./: README.md  pyproject.toml
api/: serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
shoes/: admin.py  models.py
shoes/management/commands/: bootstrap_data.py
shoes/migrations/: 0001_initial.py  0002_alter_shoe_manufacturer.py  0003_alter_shoe_manufacturer.py  0004_alter_shoe_manufacturer.py
